--- a/index.html
+++ b/index.html
@@ -5,8 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ポートフォリオ</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>TEST</h1>
+  <header>
+    <div class="content">
+      <div id="header-title">
+        <img src="img/pen_icon.svg" alt="title_logo" id="header-logo">
+        <h1>Site Title</h1>
+      </div>
+      <div class="sns">
+        <ul>
+          <li><img src="img/pen_icon.svg" alt="sns_logo"></li>
+          <li><img src="img/pen_icon.svg" alt="sns_logo"></li>
+        </ul>
+      </div>
+    </div>
+    <div class="nav">
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Works</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 </body>
 </html>
