--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ポートフォリオ</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/media.css">
 </head>
 <body>
   <header>
-    <div class="content">
+    <div class="wrapper">
       <div id="header-title">
         <img src="img/pen_icon.svg" alt="title_logo" id="header-logo">
         <h1>Site Title</h1>
@@ -32,5 +33,56 @@
       </nav>
     </div>
   </header>
+  <div id="mainvisual"></div>
+
+  <main>
+    <section id="service">
+    <h1 class="sec-title">Service</h1>
+    <div class="wrapper">
+      <div class="content">
+        <div class="text-content">
+          <h2>ディレクション</h2>
+          <p>Direction</p>
+        </div>
+        <div class="sec-img">
+          <img src="img/programing_icon.svg" alt="">
+        </div>
+        <p>ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。</p>
+      </div>
+      <div class="content">
+        <div class="text-content">
+          <h2>ディレクション</h2>
+          <p>Direction</p>
+        </div>
+        <div class="sec-img">
+          <img src="img/programing_icon.svg" alt="">
+        </div>
+        <p>ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。</p>
+      </div>
+      <div class="content">
+        <div class="text-content">
+          <h2>ディレクション</h2>
+          <p>Direction</p>
+        </div>
+        <div class="sec-img">
+          <img src="img/programing_icon.svg" alt="">
+        </div>
+        <p>ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。</p>
+      </div>
+    </div>
+    </section>
+
+    <section id="works">
+      <h1 class="sec-title">Works</h1 >
+      <div class="grid">
+        <ul>
+          <li><a href="#"><img src="img/palette_black_24dp.svg" alt=""></a></li>
+          <li><a href="#"><img src="img/palette_black_24dp.svg" alt=""></a></li>
+          <li><a href="#"><img src="img/palette_black_24dp.svg" alt=""></a></li>
+          <li><a href="#"><img src="img/palette_black_24dp.svg" alt=""></a></li>
+        </ul>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
