--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <div id="header-title">
         <img src="img/pen_icon.svg" alt="title_logo" id="header-logo">
-        <h1>Site Title</h1>
+        <h1>Portfolio Site</h1>
       </div>
       <div class="sns">
         <ul>
@@ -45,24 +45,24 @@
           <p>Direction</p>
         </div>
         <div class="sec-img">
-          <img src="img/programing_icon.svg" alt="">
+          <img src="img/brash.svg" alt="">
         </div>
         <p>ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。</p>
       </div>
       <div class="content">
         <div class="text-content">
-          <h2>ディレクション</h2>
-          <p>Direction</p>
+          <h2>デザイン</h2>
+          <p>Design</p>
         </div>
         <div class="sec-img">
-          <img src="img/programing_icon.svg" alt="">
+          <img src="img/design.svg" alt="">
         </div>
         <p>ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。ダミーテキストです。</p>
       </div>
       <div class="content">
         <div class="text-content">
-          <h2>ディレクション</h2>
-          <p>Direction</p>
+          <h2>コーディング</h2>
+          <p>Coding</p>
         </div>
         <div class="sec-img">
           <img src="img/programing_icon.svg" alt="">
@@ -85,4 +85,8 @@
     </section>
   </main>
 </body>
+
+<footer>
+  &copy; Naoki Hashimoto
+</footer>
 </html>
